{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 1032,
  "lineage": "0b293373-dfa8-167a-171e-20192b9b7d0f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fb0b230890ccd1e6",
            "arn": "arn:aws:ec2:us-east-1:730335674848:instance/i-0b3912dd07b2b78f1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b3912dd07b2b78f1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "SSH-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00e6cf7e2e48034e3"
              }
            ],
            "primary_network_interface_id": "eni-00e6cf7e2e48034e3",
            "private_dns": "ip-10-0-1-46.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.46",
            "public_dns": "ec2-3-239-227-135.compute-1.amazonaws.com",
            "public_ip": "3.239.227.135",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-035a2f27b1054b8e4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0db8b499eb51c7580",
            "tags": {
              "Name": "konvert-EC2-1"
            },
            "tags_all": {
              "Name": "konvert-EC2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07765018d83cab70b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730335674848",
            "id": "i-0b3912dd07b2b78f1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.public",
            "aws_vpc.Konvert_VPC",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fb0b230890ccd1e6",
            "arn": "arn:aws:ec2:us-east-1:730335674848:instance/i-0be71a7408d5993a4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0be71a7408d5993a4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "SSH-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0444c30345f7b1263"
              }
            ],
            "primary_network_interface_id": "eni-0444c30345f7b1263",
            "private_dns": "ip-10-0-2-152.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.152",
            "public_dns": "ec2-34-226-147-10.compute-1.amazonaws.com",
            "public_ip": "34.226.147.10",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f3ccb3b5102f54d3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018cb8482b5121244",
            "tags": {
              "Name": "konvert-EC2-2"
            },
            "tags_all": {
              "Name": "konvert-EC2-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07765018d83cab70b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730335674848",
            "id": "i-0be71a7408d5993a4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.public",
            "aws_vpc.Konvert_VPC",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335674848:internet-gateway/igw-0fda802fc6793ade9",
            "id": "igw-0fda802fc6793ade9",
            "owner_id": "730335674848",
            "region": "us-east-1",
            "tags": {
              "Name": "konvert-igw"
            },
            "tags_all": {
              "Name": "konvert-igw"
            },
            "vpc_id": "vpc-0fc5548f95865bb90"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Konvert_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "Konvert_ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:730335674848:loadbalancer/app/konvert-alb/d096a029c2d52f7e",
            "arn_suffix": "app/konvert-alb/d096a029c2d52f7e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "konvert-alb-1237643390.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:730335674848:loadbalancer/app/konvert-alb/d096a029c2d52f7e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "konvert-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-026211dc1e79d8603"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-018cb8482b5121244"
              },
              {
                "subnet_id": "subnet-0db8b499eb51c7580"
              }
            ],
            "subnets": [
              "subnet-018cb8482b5121244",
              "subnet-0db8b499eb51c7580"
            ],
            "tags": {
              "Name": "konvert-alb"
            },
            "tags_all": {
              "Name": "konvert-alb"
            },
            "vpc_id": "vpc-0fc5548f95865bb90",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:730335674848:loadbalancer/app/konvert-alb/d096a029c2d52f7e"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.Konvert_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:730335674848:listener/app/konvert-alb/d096a029c2d52f7e/b1f133cb56db3cbd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:730335674848:targetgroup/konvert-target-group/313e9c0172d27bb2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:730335674848:listener/app/konvert-alb/d096a029c2d52f7e/b1f133cb56db3cbd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:730335674848:loadbalancer/app/konvert-alb/d096a029c2d52f7e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:730335674848:listener/app/konvert-alb/d096a029c2d52f7e/b1f133cb56db3cbd"
          },
          "dependencies": [
            "aws_lb.Konvert_ALB",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.Konvert_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:730335674848:targetgroup/konvert-target-group/313e9c0172d27bb2",
            "arn_suffix": "targetgroup/konvert-target-group/313e9c0172d27bb2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:730335674848:targetgroup/konvert-target-group/313e9c0172d27bb2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "konvert-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fc5548f95865bb90"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:730335674848:targetgroup/konvert-target-group/313e9c0172d27bb2"
          },
          "dependencies": [
            "aws_vpc.Konvert_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335674848:network-acl/acl-0f8a68200bf1a1b36",
            "egress": [],
            "id": "acl-0f8a68200bf1a1b36",
            "ingress": [],
            "owner_id": "730335674848",
            "region": "us-east-1",
            "subnet_ids": [],
            "tags": {
              "Name": "konvert-public-nacl"
            },
            "tags_all": {
              "Name": "konvert-public-nacl"
            },
            "vpc_id": "vpc-0fc5548f95865bb90"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Konvert_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public_nacl_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-07470da2758481f73",
            "network_acl_id": "acl-0f8a68200bf1a1b36",
            "region": "us-east-1",
            "subnet_id": "subnet-0db8b499eb51c7580"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.public_nacl",
            "aws_subnet.public",
            "aws_vpc.Konvert_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0820acb59ca77e85c",
            "network_acl_id": "acl-0f8a68200bf1a1b36",
            "region": "us-east-1",
            "subnet_id": "subnet-018cb8482b5121244"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.public_nacl",
            "aws_subnet.public",
            "aws_vpc.Konvert_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_ephemeral",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3224063500",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f8a68200bf1a1b36",
            "protocol": "6",
            "region": "us-east-1",
            "rule_action": "allow",
            "rule_number": 300,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.public_nacl",
            "aws_vpc.Konvert_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": null,
            "icmp_code": -1,
            "icmp_type": -1,
            "id": "nacl-2251398030",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f8a68200bf1a1b36",
            "protocol": "1",
            "region": "us-east-1",
            "rule_action": "allow",
            "rule_number": 400,
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.public_nacl",
            "aws_vpc.Konvert_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1562685306",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f8a68200bf1a1b36",
            "protocol": "6",
            "region": "us-east-1",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.public_nacl",
            "aws_vpc.Konvert_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-772677567",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f8a68200bf1a1b36",
            "protocol": "-1",
            "region": "us-east-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.public_nacl",
            "aws_vpc.Konvert_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fda802fc6793ade9",
            "id": "r-rtb-07b51dde9728e9c7f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-07b51dde9728e9c7f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730335674848",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-07b51dde9728e9c7f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.Konvert_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335674848:route-table/rtb-07b51dde9728e9c7f",
            "id": "rtb-07b51dde9728e9c7f",
            "owner_id": "730335674848",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "konvert-public-route-table"
            },
            "tags_all": {
              "Name": "konvert-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc5548f95865bb90"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730335674848",
            "id": "rtb-07b51dde9728e9c7f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Konvert_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3019e18de5e21c6",
            "region": "us-east-1",
            "route_table_id": "rtb-07b51dde9728e9c7f",
            "subnet_id": "subnet-0db8b499eb51c7580"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.Konvert_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e6608b67b3cc8ae",
            "region": "us-east-1",
            "route_table_id": "rtb-07b51dde9728e9c7f",
            "subnet_id": "subnet-018cb8482b5121244"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.Konvert_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335674848:security-group/sg-026211dc1e79d8603",
            "description": "Allow HTTP and HTTPS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026211dc1e79d8603",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "konvert-alb-sg",
            "name_prefix": "",
            "owner_id": "730335674848",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fc5548f95865bb90"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730335674848",
            "id": "sg-026211dc1e79d8603",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Konvert_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335674848:security-group/sg-07765018d83cab70b",
            "description": "Allow HTTP traffic to EC2 instances",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07765018d83cab70b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "konvert-ec2_sg",
            "name_prefix": "",
            "owner_id": "730335674848",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fc5548f95865bb90"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730335674848",
            "id": "sg-07765018d83cab70b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Konvert_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335674848:subnet/subnet-081c3fa66c562eac7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081c3fa66c562eac7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335674848",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "DB-Konvert-private-subnet-1"
            },
            "tags_all": {
              "Name": "DB-Konvert-private-subnet-1"
            },
            "vpc_id": "vpc-0fc5548f95865bb90"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730335674848",
            "id": "subnet-081c3fa66c562eac7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Konvert_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335674848:subnet/subnet-0c55d35b29fd52962",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c55d35b29fd52962",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335674848",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "DB-Konvert-private-subnet-2"
            },
            "tags_all": {
              "Name": "DB-Konvert-private-subnet-2"
            },
            "vpc_id": "vpc-0fc5548f95865bb90"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730335674848",
            "id": "subnet-0c55d35b29fd52962",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Konvert_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335674848:subnet/subnet-0db8b499eb51c7580",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db8b499eb51c7580",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335674848",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "APP-Konvert-public-subnet-1"
            },
            "tags_all": {
              "Name": "APP-Konvert-public-subnet-1"
            },
            "vpc_id": "vpc-0fc5548f95865bb90"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730335674848",
            "id": "subnet-0db8b499eb51c7580",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Konvert_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335674848:subnet/subnet-018cb8482b5121244",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018cb8482b5121244",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335674848",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "APP-Konvert-public-subnet-2"
            },
            "tags_all": {
              "Name": "APP-Konvert-public-subnet-2"
            },
            "vpc_id": "vpc-0fc5548f95865bb90"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730335674848",
            "id": "subnet-018cb8482b5121244",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Konvert_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Konvert_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335674848:vpc/vpc-0fc5548f95865bb90",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07d998f6cb8dec9f6",
            "default_route_table_id": "rtb-0d0df8cc471c0262d",
            "default_security_group_id": "sg-055aba6953f363458",
            "dhcp_options_id": "dopt-01f31f400f3dc0753",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fc5548f95865bb90",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d0df8cc471c0262d",
            "owner_id": "730335674848",
            "region": "us-east-1",
            "tags": {
              "Name": "konvert-vpc"
            },
            "tags_all": {
              "Name": "konvert-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730335674848",
            "id": "vpc-0fc5548f95865bb90",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}